_build/html/reports/Nakijken Assignment 2/assignment2 Julia Bakker 14599740/assignment2/assignment2.err.log
Traceback (most recent call last):
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\jupyter_cache\executors\utils.py", line 64, in single_nb_execution
    **kwargs,
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\joepl\anaconda3\envs\jupyterbook\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
For assignemnt 2,4A i used ChatGPT version 3.5 to make step1,2 aad 3. I used it to make the code en try to make it work. I entered the question and the head of the dataset tips_df that was given. 
I was not able to make the code work on my own. i didn't really know were to start with the code since there was only little explanation and no extra website given like in the other assingments.                                        
ChatGPT did most of the work for me, all i did was change the titels and the name of the xaxis for step 2 and 3. I don't know how to make a figure caption but all three figures are made with ChatGPT.
The date to create the figure is 14-06-2023.      
------------------

[1;36m  File [1;32m"C:\Users\joepl\AppData\Local\Temp\ipykernel_6812\2694350875.py"[1;36m, line [1;32m1[0m
[1;33m    For assignemnt 2,4A i used ChatGPT version 3.5 to make step1,2 aad 3. I used it to make the code en try to make it work. I entered the question and the head of the dataset tips_df that was given.[0m
[1;37m                 ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (2694350875.py, line 1)

